fix overflow

--- a/style-index-2.css
+++ b/style-index-2.css
@@ -32,7 +32,7 @@ html {
 	); */
 	font-family: "Raleway", sans-serif;
 	box-sizing: border-box;
-	overflow: hidden;
+	overflow: auto;
 	font-size: 20px;
 	color: var(--text-black);
 }
